# smartcode

./: .env.example  .gitignore  README.md  prompt-recreate.md  pyproject.toml  recreate.md  requirements.txt  requrement_codegenet.md
app/: users.py
docs/: PIPELINE.md
examples/: demo_generate.py  demo_modify.py  demo_review.py
src/smartcode/: __init__.py  __main__.py  agent.py  cli.py  config.py  editing.py  models.py  observability.py  pipeline_view.py  uiserver.py
src/smartcode/context/: __init__.py  authority.py  compaction.py  contract.py
src/smartcode/graph/: __init__.py  builder.py  checkpointer.py  nodes.py  state.py  supervisor.py
src/smartcode/prompts/: __init__.py  roles.py
src/smartcode/providers/: __init__.py  base.py  cloud.py  local_qwen.py  mock.py  registry.py
src/smartcode/retrieval/: __init__.py  context_budget.py  repo_map.py  tree_sitter.py  workspace.py
src/smartcode/skills/: __init__.py  registry.py
src/smartcode/skills/frameworks/: express.md  fastapi.md  flask.md  react.md  spring.md
src/smartcode/skills/languages/: cpp.md  csharp.md  go.md  java.md  javascript.md  php.md  python.md  ruby.md  rust.md  typescript.md
src/smartcode/verify/: __init__.py  ast_checks.py  linters.py  runner.py  tests.py
tests/: test_graph_mock.py  test_tree_sitter.py  test_verify.py  test_workspace.py
ui/: .gitignore  main.js  package-lock.json  package.json  preload.js
ui/app/: users.py
ui/renderer/: app.js  index.html  probe.html  styles.css
