[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smartcode"
version = "0.1.0"
description = "Local-first, multi-provider code generation agent built on LangGraph — implements agent, pipeline, prompt and context-engineering patterns."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "smartcode" }]
keywords = ["llm", "agent", "langgraph", "code-generation", "qwen", "slm"]

dependencies = [
    "langgraph>=1.2,<2",
    "langgraph-checkpoint-sqlite>=3.0",
    "langchain>=1.3,<2",
    "langchain-core>=1.4,<2",
    "langchain-community>=0.3",
    "langchain-anthropic>=1.4",
    "langchain-openai>=1.3",
    "langchain-groq>=1.1",
    "langchain-google-genai>=4.2",
    "pydantic>=2.10",
    "pydantic-settings>=2.14",
    "rich>=13.9",
    "typer>=0.15",
    "jinja2>=3.1",
    "tree-sitter>=0.25,<0.26",
    "tree-sitter-python>=0.25",
    "tree-sitter-javascript>=0.25",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-go>=0.25",
    "tree-sitter-rust>=0.24",
    "tree-sitter-java>=0.23",
    "tree-sitter-c>=0.24",
    "tree-sitter-cpp>=0.23",
    "tree-sitter-c-sharp>=0.23",
    "tree-sitter-ruby>=0.23",
    "tree-sitter-php>=0.24",
    "transformers>=4.46",
    "httpx>=0.28",
]

[project.optional-dependencies]
# torch is intentionally optional: install it for the local Qwen SLM.
# Pascal GPUs (GTX 1050 Ti) lack bf16 support, so we load the model in fp16/cpu.
local = [
    "torch>=2.2",
]
local-cuda = [
    # Install with: uv pip install torch --index-url https://download.pytorch.org/whl/cu121
    "torch>=2.2",
]

[dependency-groups]
dev = ["pytest>=8.3"]

[project.scripts]
smartcode = "smartcode.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/smartcode"]

[tool.hatch.build.targets.wheel.force-include]
"src/smartcode/skills" = "smartcode/skills"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --basetemp=.pytest-tmp"
